--- a/.github/workflows/generateApk.yml
+++ b/.github/workflows/generateApk.yml
@@ -16,6 +16,9 @@ jobs:
           distribution: 'zulu'
           java-version: "12.x"
           cache: 'gradle'
+
+      - name: Navigate to src directory
+        run: cd src
           
       - uses: subosito/flutter-action@v2
         with:          
