--- a/.github/workflows/generateApk.yml
+++ b/.github/workflows/generateApk.yml
@@ -27,9 +27,9 @@ jobs:
         working-directory: ./src
         run: flutter pub get
 
-      - name: Create keystore.jks file
+      - name: Create upload-keystore.jks file
         run: |
-          echo "${{ secrets.JKS_B64 }}" | base64 --decode > android/app/keystore.jks
+          echo "${{ secrets.JKS_B64 }}" | base64 --decode > android/app/upload-keystore.jks
           echo "${{ secrets.KEY_PROPERTIES }}" > android/key.properties
 
       - name: Start release build
