--- a/.github/workflows/generateApk.yml
+++ b/.github/workflows/generateApk.yml
@@ -36,4 +36,10 @@ jobs:
       - name: Start release build
         working-directory: ./src
         run: flutter build apk --release
+        
+      - uses: actions/upload-artifact@v4
+        with:
+          name: release-apk
+          working-directory: ./src
+          path: build/app/outputs/apk/release/app-release.apk
 
