--- a/.github/workflows/generateAppRelease.yml
+++ b/.github/workflows/generateAppRelease.yml
@@ -33,9 +33,25 @@ jobs:
           path: version.txt
 
   build:   
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest 
+    needs: [version]
     steps:      
-      - uses: actions/checkout@v4      
+      - uses: actions/checkout@v4  
+      - name: Get version.txt
+        uses: actions/download-artifact@v2
+        with:
+          name: gitversion  
+          
+      - name: Create New File Without Newline Char from version.txt
+        run: tr -d '\n' < version.txt > version1.txt
+      - name: Read Version
+        id: version
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: version1.txt
+      - name: Update Version in YAML
+        run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
+        
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
@@ -48,8 +64,11 @@ jobs:
           channel: 'stable'
           cache: true
           
+      - name: Clear project
+        working-directory: ./src        
+        run: flutter clean
       - name: Get dependencies
-        working-directory: ./src
+        working-directory: ./src        
         run: flutter pub get
 
       - name: Create upload-keystore.jks file
@@ -58,12 +77,13 @@ jobs:
           echo "${{ secrets.JKS_B64 }}" | base64 --decode > android/app/upload-keystore.jks
           echo "${{ secrets.KEY_PROPERTIES }}" > android/key.properties
 
-      - name: Start release build
-        working-directory: ./src
-        run: flutter build apk --release
+      - name: Start and Generate App Bundle
+        working-directory: ./src        
+        run: flutter build appbundle --release 
         
-      - uses: actions/upload-artifact@v4
+      - name: Upload App Bundle and ready to submit 
+        uses: actions/upload-artifact@v4
         with:
-          name: release-apk
-          path: src/build/app/outputs/flutter-apk/app-release.apk
+          name: appbundle
+          path: src/build/app/outputs/flutter-apk/app-release.aab
 
