--- a/.github/workflows/generateAppRelease.yml
+++ b/.github/workflows/generateAppRelease.yml
@@ -12,10 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Retrieve Tags and Branch History
+      - name: Feth Histories for All Tags and Branches
         run: |
           git config remote.origin.url @github.com/${{github.repository">https://x-access-token:${{secrets.TOKEN_GITHUB}}@github.com/${{github.repository}}
           git fetch --prune --depth=10000
+      
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.9.7
         with:
