--- a/.github/workflows/generateAppRelease.yml
+++ b/.github/workflows/generateAppRelease.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           path: version1.txt
       - name: Update Version in YAML
-        run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
+        run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' src/pubspec.yaml
         
       - uses: actions/setup-java@v3
         with:
