--- a/.github/workflows/generateAppRelease.yml
+++ b/.github/workflows/generateAppRelease.yml
@@ -85,4 +85,23 @@ jobs:
         with:
           name: appbundle
           path: src/build/app/outputs/bundle/release/app-release.aab
+          
+  release:
+    name: Release app to production track
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Get appbundle from artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: appbundle
+    - name: Release app to production track
+      uses: r0adkll/upload-google-play@v1
+      with:
+        serviceAccountJsonPlainText: ${{secrets.PLAYSTORE_ACCOUNT_KEY}}
+        packageName: com.psychiatryuk.src
+        releaseFiles: app-release.aab
+        track: production
+        status: completed
 
